--- a/Assignment-1/Assignment-1.vcxproj.filters
+++ b/Assignment-1/Assignment-1.vcxproj.filters
@@ -18,5 +18,8 @@
     <ClCompile Include="Assignment-1.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="glad.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
